# calamares-qml

./: .travis.yml  README.md  calamares-qml.kdev4  calamares.kdev4  travis-build.sh
debian/: changelog  control  lintian-overrides
src/calamares/: CalamaresApplication.cpp  CalamaresWindow.cpp
src/libcalamares/locale/: TimeZone.cpp
src/libcalamaresui/: Branding.h
src/libcalamaresui/modulesystem/: ModuleManager.cpp
src/libcalamaresui/utils/: CalamaresUtilsGui.cpp  CalamaresUtilsGui.h
src/libcalamaresui/viewpages/: QmlViewStep.cpp
src/modules/finishedq/: CMakeLists.txt  Config.cpp  Config.h  FinishedQmlViewStep.cpp  FinishedQmlViewStep.h
src/modules/keyboard/: Config.h  KeyboardLayoutModel.cpp
src/modules/locale/: Config.cpp  Config.h
src/modules/locale/timezonewidget/: TimeZoneImage.cpp
src/modules/localeq/: LocaleQmlViewStep.cpp  LocaleQmlViewStep.h
src/modules/partition/core/: BootLoaderModel.cpp  BootLoaderModel.h  DeviceModel.cpp  DeviceModel.h  PartitionCoreModule.cpp  PartitionCoreModule.h
src/modules/partition/gui/: PartitionSplitterWidget.cpp
src/modules/partitionq/: CMakeLists.txt  Config.cpp  Config.h  PartitionQmlViewStep.cpp  PartitionQmlViewStep.h
src/modules/plasmalnf/: Config.cpp
src/modules/plasmalnfq/: CMakeLists.txt  PlasmaQmlLnfViewStep.cpp  PlasmaQmlLnfViewStep.h  plasmalnfq.conf
src/modules/summaryq/: CMakeLists.txt  Config.cpp  Config.h  SummaryQmlViewStep.cpp  SummaryQmlViewStep.h
src/modules/users/: Config.cpp  Config.h
src/modules/usersq/: UsersQmlViewStep.cpp  usersq.qml
src/modules/usersq/bk/: Config.cpp  Config.h
src/modules/welcome/: Config.cpp  Config.h
src/modules/welcomeq/: WelcomeQmlViewStep.cpp
